# llm-engine

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  ci.py
.github/workflows/: ci.yml
benchmark/offline/: bench.py  bench_wildchat.py
benchmark/online/: bench_qwen.py  bench_simple.py
crates/llm/: Cargo.toml
crates/llm/src/: api.rs  lib.rs  main.rs
crates/llm/src/attention/: base.rs  eager.rs  fa.rs  fi.rs  mod.rs
crates/llm/src/core/: block_manager.rs  engine.rs  mod.rs  prefix_cache_hash.rs  runner.rs  scheduler.rs  sequence.rs
crates/llm/src/core/prefix_cache/: hash.rs  mod.rs  radix.rs
crates/llm/src/ipc/: messages.rs
crates/llm/src/models/: mod.rs  qwen3.rs
crates/llm/src/models/layers/: attention.rs  context.rs  distributed.rs  embed_head.rs  linear.rs  mod.rs  norm.rs  rotary.rs
crates/llm/src/runner/: mod.rs  sampler.rs
crates/llm/src/scheduler/: io.rs  mod.rs  prefill.rs  scheduler.rs
crates/llm/src/server/: api.rs  launch.rs  mod.rs  shell.rs  streaming.rs
crates/llm/src/tokenizer/: detokenize.rs  mod.rs  tokenize.rs  worker.rs
crates/llm/src/utils/: config.rs  graph.rs  kvcache_allocator.rs  loader.rs  mod.rs  tokenizer.rs
llmeng/: core.py  env.py  modal.py  server.py  shell.py
llmeng/attention/: __init__.py  base.py  fa.py  fi.py  trtllm.py  utils.py
llmeng/benchmark/: client.py  perf.py
llmeng/distributed/: impl.py  info.py
llmeng/engine/: config.py  engine.py  graph.py  sample.py
llmeng/kernel/: __main__.py  moe_impl.py  pynccl.py  store.py  utils.py
llmeng/kvcache/: __init__.py  mha_pool.py  naive_cache.py  radix_cache.py
llmeng/layers/: attention.py  embedding.py  linear.py  moe.py  rotary.py
llmeng/llm/: llm.py
llmeng/message/: backend.py  tokenizer.py
llmeng/models/: _common.py  base.py  llama.py  qwen2.py  utils.py  weight.py
llmeng/moe/: __init__.py  fused.py
llmeng/scheduler/: cache.py  config.py  decode.py  io.py  prefill.py  scheduler.py  utils.py
llmeng/server/: api_server.py  args.py  launch.py
llmeng/tokenizer/: server.py  (+2 more)
minisgl/: app.py  modal.py  shell.py
scripts/: conn.sh  modal_shell.py
(+72 files in other folders)
